fix the precision problem in a general manner and put debug control flow

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ project(LightFieldProject LANGUAGES CXX CUDA)
 set(CMAKE_CUDA_HOST_COMPILER "/usr/bin/g++-13")
 
 # Set C++ standard
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Find OpenCV package
@@ -40,7 +40,11 @@ target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
 target_include_directories(${PROJECT_NAME} PRIVATE ${OpenCV_INCLUDE_DIRS})
 
 target_compile_options(${PROJECT_NAME} PRIVATE
-    $<$<COMPILE_LANGUAGE:CUDA>:-G -lnvToolsExt>
+    $<$<COMPILE_LANGUAGE:CUDA>:
+        -G 
+        -lnvToolsExt
+        --fmad=false
+    >
 )
 
 # CUDA settings
